--- a/tes.html
+++ b/tes.html
@@ -51,58 +51,56 @@
   </div>
 </div>
 
-<section class="container section nav-section facts" id="facts">
-  <div class="title">
-    <img src="https://cdn3.iconfinder.com/data/icons/mix-and-miscellaneous/94/handrawn_idea_bulb_light-512.png" width="59" alt=""> 
-    <h2>Интересные факты</h2>    
-  </div>
-  <ul class="facts__list">
-    <li>
-      <div class="facts__fact-title">Facts 1 - Lorem, ipsum dolor.</div>
-      <div class="facts__fact-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo obcaecati doloribus unde ratione deserunt maxime!Quae praesentium, reprehenderit perferendis odit sit obcaecati mollitia iste voluptatum cupiditate a debitis incidunt nobis quibusdam libero facilis nam dolore, quis, quaerat aperiam nesciunt hic consectetur.Quae praesentium, reprehenderit perferendis odit sit obcaecati mollitia iste voluptatum cupiditate a debitis incidunt nobis quibusdam libero facilis nam dolore, quis, quaerat aperiam nesciunt hic consectetur.</div>
-    </li>
-    <li>
-      <div class="facts__fact-title facts__fact-title_active">Facts 2 - Lorem, ipsum.</div>
-      <div class="facts__fact-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, suscipit saepe. Ipsam, laborum! Quos blanditiis quia tenetur quo explicabo a quis dolorem et, aliquam animi impedit dolore sed voluptatem mollitia, repellat, quas necessitatibus repellendus. Corporis, dolorum nulla officiis blanditiis iste at cumque odio consequatur dignissimos vero enim commodi unde laboriosam non inventore fuga explicabo necessitatibus autem, amet expedita praesentium facere, accusantium consectetur velit. Eum laborum, minima et dolor tempore adipisci odit nam ipsum voluptas alias, ut libero aut quae tenetur, assumenda blanditiis quasi. Quos, nobis! Aperiam nobis omnis soluta? Illo, laboriosam repellendus dignissimos dicta impedit omnis culpa fugiat veniam beatae?</div>
-    </li>
-    <li>
-      <div class="facts__fact-title">Facts 3 - Lorem ipsum dolor sit.</div>
-      <div class="facts__fact-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam neque sed repudiandae nihil veniam laboriosam rem necessitatibus saepe dolor! Consequatur modi incidunt facere. Obcaecati voluptatum debitis harum quis tenetur fuga quasi accusamus ut porro sapiente nemo quod aspernatur architecto laboriosam velit corporis at, quas perspiciatis, libero accusantium! Quidem, neque tempore?Quae praesentium, reprehenderit perferendis odit sit obcaecati mollitia iste voluptatum cupiditate a debitis incidunt nobis quibusdam libero facilis nam dolore, quis, quaerat aperiam nesciunt hic consectetur.</div>
-    </li>
-    <li>
-      <div class="facts__fact-title">Facts 4 - Lorem, ipsum dolor.</div>
-      <div class="facts__fact-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero deleniti nihil corporis ad! Commodi dolore neque obcaecati doloribus dicta quas quidem totam ab nobis cupiditate?Quae praesentium, reprehenderit perferendis odit sit obcaecati mollitia iste voluptatum cupiditate a debitis incidunt nobis quibusdam libero facilis nam dolore, quis, quaerat aperiam nesciunt hic consectetur.</div>
-    </li>
-    <li>
-      <div class="facts__fact-title">Facts 5 - Lorem, ipsum dolor.</div>
-      <div class="facts__fact-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, repellendus.Quae praesentium, reprehenderit perferendis odit sit obcaecati mollitia iste voluptatum cupiditate a debitis incidunt nobis quibusdam libero facilis nam dolore, quis, quaerat aperiam nesciunt hic consectetur.</div>
-    </li>
-    <li>
-      <div class="facts__fact-title">Facts 6 - Lorem ipsum dolor sit.</div>
-      <div class="facts__fact-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio quo sapiente eum at! Recusandae ipsam dignissimos quia voluptatum tempora qui mollitia similique blanditiis, aliquam, facilis animi magni debitis cumque error non est consequatur laudantium. Quae praesentium, reprehenderit perferendis odit sit obcaecati mollitia iste voluptatum cupiditate a debitis incidunt nobis quibusdam libero facilis nam dolore, quis, quaerat aperiam nesciunt hic consectetur.</div>
-    </li>
-    <li>
-      <div class="facts__fact-title">Facts 7 - Lorem ipsum dolor sit.</div>
-      <div class="facts__fact-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea odio laboriosam fugit ad dicta ipsum rerum asperiores id.Quae praesentium, reprehenderit perferendis odit sit obcaecati mollitia iste voluptatum cupiditate a debitis incidunt nobis quibusdam libero facilis nam dolore, quis, quaerat aperiam nesciunt hic consectetur.</div>
-    </li>
-    <li>
-      <div class="facts__fact-title">Facts 8 - Lorem, ipsum.</div>
-      <div class="facts__fact-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et perspiciatis unde voluptatem? Dolor modi dicta quibusdam aliquid perspiciatis nihil minima, officia, ex id debitis quis. Nostrum eum quod at hic.Quae praesentium, reprehenderit perferendis odit sit obcaecati mollitia iste voluptatum cupiditate a debitis incidunt nobis quibusdam libero facilis nam dolore, quis, quaerat aperiam nesciunt hic consectetur.</div>
-    </li>
-  </ul>
-  <div class="facts__fact-container"></div>  
-</section>
+<div class="row container">  
+   <div class="col-md-4 login-sec">
+    <div class="tab">
+    <button class="tablinks" onclick="openCity(event, 'srengseng')" id="defaultOpen">Srengseng</button>
+    <button class="tablinks" onclick="openCity(event, 'grogol')">Grogol</button>
+    <button class="tablinks" onclick="openCity(event, 'depok')">Depok</button>
+    <button class="tablinks" onclick="openCity(event, 'tebet')">Tebet</button>
+    <button class="tablinks" onclick="openCity(event, 'gading')">Kelapa Gading</button>
+  </div>      
+    </div>
 
-<script type="text/javascript">
-  var activeFact = $('.facts__fact-title_active').length != 0 ? $('.facts__fact-title_active') : $('.facts__fact-title:first-child');
-$('.facts__fact-container').text(activeFact.next().text());
-$(document).on('click', '.facts__fact-title', function(){
-  if(!$(this).hasClass('facts__fact-title_active')){
-    $('.facts__fact-title').removeClass('facts__fact-title_active');
-    $(this).addClass('facts__fact-title_active');
-    
-    $('.facts__fact-container').text($(this).next().text());
-    
-  }
-})
-</script>
+<div class="col-md-8 banner-sec">
+            <div id="srengseng" class="tabcontent">
+    <h4>Srengseng</h4>
+    <p></p>
+  </div>
+
+  <div id="grogol" class="tabcontent">
+    <h4>Grogol</h4>
+    <p></p> 
+  </div>
+
+  <div id="depok" class="tabcontent">
+    <h4>Depok</h4>
+    <p></p>
+  </div>
+  <div id="tebet" class="tabcontent">
+    <h4>Tebet</h4>
+    <p></p>
+  </div>
+  <div id="gading" class="tabcontent">
+    <h4>Kelapa gading</h4>
+    <p></p>
+  </div>
+   </div>
+
+   <script type="text/javascript">
+     function openCity(evt, cityName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+
+document.getElementById("defaultOpen").click();
+   </script>
