update lagi bro

--- a/tes.html
+++ b/tes.html
@@ -14,7 +14,7 @@
 
    <div class="row">  
       <div class="col-md-8 banner-sec">
-            <img class="d-block img-fluid" src="https://htmlstream.com/preview/space-v1.1/assets/img/1920x1080/img4.jpg" alt="First slide">
+            <img class="d-block img-fluid" src="assets/img/pendaftaran.png" alt="First slide">
    </div>
    <div class="col-md-4 login-sec">
           <h2 class="text-center">Login Now</h2>
