--- a/tes.html
+++ b/tes.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="row container">  
-   <div class="col-md-4 login-sec">
+   <div class="col-md-4 login-sec1">
     <div class="tab">
     <button class="tablinks" onclick="openCity(event, 'srengseng')" id="defaultOpen">Srengseng</button>
     <button class="tablinks" onclick="openCity(event, 'grogol')">Grogol</button>
@@ -62,7 +62,7 @@
   </div>      
     </div>
 
-<div class="col-md-8 banner-sec">
+<div class="col-md-8 banner-sec1">
             <div id="srengseng" class="tabcontent">
     <h4>Srengseng</h4>
     <p></p>
