--- a/tes.html
+++ b/tes.html
@@ -57,34 +57,40 @@
     <button class="tablinks" onclick="openCity(event, 'srengseng')" id="defaultOpen">Srengseng</button>
     <button class="tablinks" onclick="openCity(event, 'grogol')">Grogol</button>
     <button class="tablinks" onclick="openCity(event, 'depok')">Depok</button>
-    <button class="tablinks" onclick="openCity(event, 'tebet')">Tebet</button>
-    <button class="tablinks" onclick="openCity(event, 'gading')">Kelapa Gading</button>
+    <!-- <button class="tablinks" onclick="openCity(event, 'tebet')">Tebet</button>
+    <button class="tablinks" onclick="openCity(event, 'gading')">Kelapa Gading</button> -->
   </div>      
     </div>
 
 <div class="col-md-8 banner-sec1">
             <div id="srengseng" class="tabcontent">
     <h4>Srengseng</h4>
-    <p></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque convallis gravida lobortis. In commodo finibus leo id consequat. Nunc commodo feugiat orci eget molestie. Integer vel posuere lacus. Morbi imperdiet, urna nec dictum bibendum, leo lacus fringilla ex, vel ullamcorper sapien turpis pharetra ex. Phasellus et facilisis tortor. Ut hendrerit, enim in molestie rhoncus, lacus nisi faucibus enim, eget feugiat leo velit ut purus. Curabitur aliquam, ligula id maximus suscipit, lectus leo iaculis nibh, vitae accumsan quam neque nec neque</p>
+    <p>Praesent a imperdiet risus, ut fringilla odio. Mauris interdum urna et lectus consequat, vulputate sagittis enim mollis. Suspendisse ullamcorper lacus lectus, nec accumsan sem auctor nec. Nullam tincidunt diam vel augue auctor, ac elementum odio aliquam. Donec venenatis nec purus non suscipit. Nullam id fermentum odio, nec interdum augue. Aliquam tempor euismod urna, id tempor nisl facilisis quis. Sed elit tortor, placerat at mattis ut, ullamcorper vel libero. Nulla luctus non ligula sit amet rutrum. In sodales, erat at ornare sodales, tellus magna egestas est, ac lacinia quam felis sit amet diam. Duis fringilla diam sit amet augue posuere, a commodo diam hendrerit. Cras a egestas tortor, nec pellentesque orci. Nulla ut tincidunt ligula. </p>
+    <p>Etiam dictum, tellus tristique cursus ornare, est diam viverra est, sit amet vestibulum tortor mi luctus nisi. In tempus purus sed ex aliquet dictum. Etiam convallis arcu quis risus suscipit, ut aliquet justo finibus. Fusce at luctus ex. Suspendisse pulvinar rhoncus sapien mollis aliquet. Maecenas dapibus mi lectus, in gravida sem vestibulum ac. Etiam elementum ipsum orci, ac sodales diam accumsan quis. Pellentesque venenatis porttitor sem. Suspendisse felis urna, aliquam sed magna vel, venenatis tempor sapien. Aenean quis sodales quam. Fusce at ipsum turpis. Morbi elementum est arcu, vel rutrum elit luctus eu. Aliquam erat volutpat. </p>
   </div>
 
   <div id="grogol" class="tabcontent">
     <h4>Grogol</h4>
-    <p></p> 
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque convallis gravida lobortis. In commodo finibus leo id consequat. Nunc commodo feugiat orci eget molestie. Integer vel posuere lacus. Morbi imperdiet, urna nec dictum bibendum, leo lacus fringilla ex, vel ullamcorper sapien turpis pharetra ex. Phasellus et facilisis tortor. Ut hendrerit, enim in molestie rhoncus, lacus nisi faucibus enim, eget feugiat leo velit ut purus. Curabitur aliquam, ligula id maximus suscipit, lectus leo iaculis nibh, vitae accumsan quam neque nec neque</p>
+    <p>Praesent a imperdiet risus, ut fringilla odio. Mauris interdum urna et lectus consequat, vulputate sagittis enim mollis. Suspendisse ullamcorper lacus lectus, nec accumsan sem auctor nec. Nullam tincidunt diam vel augue auctor, ac elementum odio aliquam. Donec venenatis nec purus non suscipit. Nullam id fermentum odio, nec interdum augue. Aliquam tempor euismod urna, id tempor nisl facilisis quis. Sed elit tortor, placerat at mattis ut, ullamcorper vel libero. Nulla luctus non ligula sit amet rutrum. In sodales, erat at ornare sodales, tellus magna egestas est, ac lacinia quam felis sit amet diam. Duis fringilla diam sit amet augue posuere, a commodo diam hendrerit. Cras a egestas tortor, nec pellentesque orci. Nulla ut tincidunt ligula. </p>
+    <p>Etiam dictum, tellus tristique cursus ornare, est diam viverra est, sit amet vestibulum tortor mi luctus nisi. In tempus purus sed ex aliquet dictum. Etiam convallis arcu quis risus suscipit, ut aliquet justo finibus. Fusce at luctus ex. Suspendisse pulvinar rhoncus sapien mollis aliquet. Maecenas dapibus mi lectus, in gravida sem vestibulum ac. Etiam elementum ipsum orci, ac sodales diam accumsan quis. Pellentesque venenatis porttitor sem. Suspendisse felis urna, aliquam sed magna vel, venenatis tempor sapien. Aenean quis sodales quam. Fusce at ipsum turpis. Morbi elementum est arcu, vel rutrum elit luctus eu. Aliquam erat volutpat. </p> 
   </div>
 
   <div id="depok" class="tabcontent">
     <h4>Depok</h4>
-    <p></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque convallis gravida lobortis. In commodo finibus leo id consequat. Nunc commodo feugiat orci eget molestie. Integer vel posuere lacus. Morbi imperdiet, urna nec dictum bibendum, leo lacus fringilla ex, vel ullamcorper sapien turpis pharetra ex. Phasellus et facilisis tortor. Ut hendrerit, enim in molestie rhoncus, lacus nisi faucibus enim, eget feugiat leo velit ut purus. Curabitur aliquam, ligula id maximus suscipit, lectus leo iaculis nibh, vitae accumsan quam neque nec neque</p>
+    <p>Praesent a imperdiet risus, ut fringilla odio. Mauris interdum urna et lectus consequat, vulputate sagittis enim mollis. Suspendisse ullamcorper lacus lectus, nec accumsan sem auctor nec. Nullam tincidunt diam vel augue auctor, ac elementum odio aliquam. Donec venenatis nec purus non suscipit. Nullam id fermentum odio, nec interdum augue. Aliquam tempor euismod urna, id tempor nisl facilisis quis. Sed elit tortor, placerat at mattis ut, ullamcorper vel libero. Nulla luctus non ligula sit amet rutrum. In sodales, erat at ornare sodales, tellus magna egestas est, ac lacinia quam felis sit amet diam. Duis fringilla diam sit amet augue posuere, a commodo diam hendrerit. Cras a egestas tortor, nec pellentesque orci. Nulla ut tincidunt ligula. </p>
+    <p>Etiam dictum, tellus tristique cursus ornare, est diam viverra est, sit amet vestibulum tortor mi luctus nisi. In tempus purus sed ex aliquet dictum. Etiam convallis arcu quis risus suscipit, ut aliquet justo finibus. Fusce at luctus ex. Suspendisse pulvinar rhoncus sapien mollis aliquet. Maecenas dapibus mi lectus, in gravida sem vestibulum ac. Etiam elementum ipsum orci, ac sodales diam accumsan quis. Pellentesque venenatis porttitor sem. Suspendisse felis urna, aliquam sed magna vel, venenatis tempor sapien. Aenean quis sodales quam. Fusce at ipsum turpis. Morbi elementum est arcu, vel rutrum elit luctus eu. Aliquam erat volutpat. </p>
   </div>
-  <div id="tebet" class="tabcontent">
+  <!-- <div id="tebet" class="tabcontent">
     <h4>Tebet</h4>
     <p></p>
   </div>
   <div id="gading" class="tabcontent">
     <h4>Kelapa gading</h4>
     <p></p>
-  </div>
+  </div> -->
    </div>
 
    <script type="text/javascript">
