hampir selesai bang

--- a/startbootstrap-small-business-gh-pages/index.html
+++ b/startbootstrap-small-business-gh-pages/index.html
@@ -171,9 +171,9 @@
         <div class="col-sm-2">
           <nav class="nav-sidebar">
           <ul class="nav tabs">
-                <li class=""><h4>3 methods Space can help to grow your business with</h4></li>
-                <li class="active"><a href="#tab1" data-toggle="tab">Lorem ipsum</a></li>
-                <li class=""><a href="#tab2" data-toggle="tab">Dolor asit amet</a></li>
+                <li class=""><h6>3 methods Space can help to grow your business with</h6></li>
+                <li class=""><a href="#tab1" data-toggle="tab">Lorem ipsum ssaa</a></li>
+                <li class=""><a href="#tab2" data-toggle="tab">Dolor asit amet sss</a></li>
                 <li class=""><a href="#tab3" data-toggle="tab">Stet clita</a></li>                               
           </ul>
         </nav>
@@ -262,7 +262,7 @@
 
     </div>
     <!-- /.container -->
-    
+      
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
