--- a/startbootstrap-small-business-gh-pages/index.html
+++ b/startbootstrap-small-business-gh-pages/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Small Business - Start Bootstrap Template</title>
+    <title>PMB - STT NF</title>
 
     <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -172,7 +172,7 @@
           <nav class="nav-sidebar">
           <ul class="nav tabs">
                 <li class=""><h6>3 methods Space can help to grow your business with</h6></li>
-                <li class=""><a href="#tab1" data-toggle="tab">Lorem ipsum ssaa</a></li>
+                <li class=""><a href="#tab1" data-toggle="tab">Syarat Pendaftaran</a></li>
                 <li class=""><a href="#tab2" data-toggle="tab">Dolor asit amet sss</a></li>
                 <li class=""><a href="#tab3" data-toggle="tab">Stet clita</a></li>                               
           </ul>
@@ -222,6 +222,11 @@
       <!-- Content Row -->
       <div class="row">
         <div class="col-md-4 mb-4">
+          <h2>Program Studi</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title">Card One</h2>
@@ -245,16 +250,6 @@
           </div>
         </div>
         <!-- /.col-md-4 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h2 class="card-title">Card Three</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">More Info</a>
-            </div>
-          </div>
         </div>
         <!-- /.col-md-4 -->
 
